<resources>
    <string name="app_name">Taylor Insurance</string>
    <string name="btnTips">Tips</string>
    <string name="btnContactUs">Contact Us</string>
    <string name="btnLoginMain">Login</string>
    <string name="btnLoginValidate">Login</string>
    <string name="btnCancel">Cancel</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="txtMainQuote">All your money are now belong to us!</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="btnHomeInsur">Home Insurance Policy</string>
    <string name="btnAutoInsur">Auto Insurance Policy</string>
    <string name="txtActCustName">Customer Name: </string>
    <string name="txtActCustEmail">Email: </string>
    <string name="btnCustHome">Home</string>

    <string name="txtMainAutoInsurTip">Tip of the day:</string>
    <string name="txtMainAutoTips">Did you know that you are only qualified to pay the premiums?</string>
    <string name="btnBackTips">Home</string>

    <string name="txtContactUs">Contact Us</string>
    <string name="txtContactInfo">Phone: 709-123-4567</string>
    <string name="txtContactInfoEmail">Email: quote@taylorinsurance.com</string>
    <string name="btnBackContactUs">Home</string>

    <string name="txtHomeInfo">Home Policy Information:</string>
    <string name="txtHomeCity">City:</string>
    <string name="txtHomeDateBuilt">Date Built:</string>
    <string name="txtHomeHeatType">Heating Type:</string>
    <string name="txtHomeLocation">Location:</string>
    <string name="txtHomePostal">Postal Code:</string>
    <string name="txtHomeAddress">Address:</string>
    <string name="txtHomePolicySD">Policy Start Date:</string>
    <string name="txtHomePolicyED">Policy End Date:</string>
    <string name="txtHomePolicyPrem">Policy Premium:</string>

    <string name="txtAutoInfo">Auto Policy Information:</string>
    <string name="txtAutoMake">Vehicle Make:</string>
    <string name="txtAutoModel">Vehicle Model:</string>
    <string name="txtAutoDateMade">Date Manufactured:</string>
    <string name="txtAutoPolicySD">Policy Start Date:</string>
    <string name="txtAutoPolicyED">Policy End Date:</string>
    <string name="txtAutoPolicyPrem">Policy Premium:</string>

    <string name="btnCustLogout">Logout</string>

</resources>