<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".AutoInsurActivity"
    android:background="@drawable/appbackgroundfog">

    <ImageView
        android:id="@+id/ivTipsLogo"
        android:layout_width="332dp"
        android:layout_height="282dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/taylorinsurancepureblack" />

    <TextView
        android:id="@+id/txtMainAutoInsurTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivTipsLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/txtMainAutoInsurTip"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtMainAutoTips"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtMainAutoInsurTip"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/txtMainAutoTips"
        android:textSize="25dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnBackTips"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:paddingHorizontal="80dp"
        android:paddingVertical="20dp"
        android:shape="rectangle"
        android:radius="10dp"
        android:text="@string/btnBackTips"
        app:icon="@android:drawable/ic_dialog_dialer" />
</RelativeLayout>